// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Cdk8sComponent Custom Configuration should use custom k8s version 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

language: typescript
app: npx ts-node src/main.ts
imports:
  - k8s@1.32.0
"
`;

exports[`Cdk8sComponent Custom Configuration should use custom k8s version 2`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "dependencies": {
    "aws-cdk-lib": "^2.1.0",
    "cdk8s": "*",
    "cdk8s-plus-32": "*",
    "constructs": "^10.0.5",
  },
  "devDependencies": {
    "@types/jest": "*",
    "@types/node": "*",
    "@typescript-eslint/eslint-plugin": "^8",
    "@typescript-eslint/parser": "^8",
    "aws-cdk": "^2",
    "cdk8s-cli": "*",
    "commitizen": "*",
    "cz-customizable": "*",
    "esbuild": "*",
    "eslint": "^9",
    "eslint-config-prettier": "*",
    "eslint-import-resolver-typescript": "*",
    "eslint-plugin-import": "*",
    "eslint-plugin-prettier": "*",
    "jest": "*",
    "jest-junit": "^16",
    "prettier": "*",
    "projen": "*",
    "ts-jest": "*",
    "ts-node": "*",
    "typescript": "*",
  },
  "jest": {
    "clearMocks": true,
    "collectCoverage": true,
    "coverageDirectory": "coverage",
    "coveragePathIgnorePatterns": [
      "/node_modules/",
    ],
    "coverageProvider": "v8",
    "coverageReporters": [
      "json",
      "lcov",
      "clover",
      "cobertura",
      "text",
    ],
    "reporters": [
      "default",
      [
        "jest-junit",
        {
          "outputDirectory": "test-reports",
        },
      ],
    ],
    "testMatch": [
      "<rootDir>/@(src|test)/**/*(*.)@(spec|test).ts?(x)",
      "<rootDir>/@(src|test)/**/__tests__/**/*.ts?(x)",
    ],
    "testPathIgnorePatterns": [
      "/node_modules/",
    ],
    "transform": {
      "^.+\\.[t]sx?$": [
        "ts-jest",
        {
          "tsconfig": "tsconfig.dev.json",
        },
      ],
    },
    "watchPathIgnorePatterns": [
      "/node_modules/",
    ],
  },
  "license": "Apache-2.0",
  "name": "test-cdk-app",
  "peerDependencies": {
    "cdk8s": "*",
  },
  "publishConfig": {
    "access": "public",
  },
  "scripts": {
    "build": "npx projen build",
    "bundle": "npx projen bundle",
    "cdk8s": "npx projen cdk8s",
    "cdk8s:import": "npx projen cdk8s:import",
    "cdk8s:synth": "npx projen cdk8s:synth",
    "clobber": "npx projen clobber",
    "commit": "npx projen commit",
    "compile": "npx projen compile",
    "default": "npx projen default",
    "deploy": "npx projen deploy",
    "destroy": "npx projen destroy",
    "diff": "npx projen diff",
    "eject": "npx projen eject",
    "eslint": "npx projen eslint",
    "package": "npx projen package",
    "post-compile": "npx projen post-compile",
    "post-upgrade": "npx projen post-upgrade",
    "pre-compile": "npx projen pre-compile",
    "projen": "npx projen",
    "synth": "npx projen synth",
    "synth:silent": "npx projen synth:silent",
    "test": "npx projen test",
    "test:watch": "npx projen test:watch",
    "upgrade": "npx projen upgrade",
    "watch": "npx projen watch",
  },
  "version": "0.0.0",
}
`;

exports[`Cdk8sComponent Custom Configuration should use custom paths and imports 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

language: typescript
app: npx ts-node k8s/app.ts
imports:
  - k8s@1.31.0
  - prometheus-operator@1.0.0
  - grafana@2.0.0
"
`;

exports[`Cdk8sComponent Custom Configuration should use custom paths and imports 2`] = `
"import { App, Chart, ChartProps, ApiObject } from 'cdk8s';
import { Construct } from 'constructs';

export class MyChart extends Chart {
  constructor(scope: Construct, id: string, props: ChartProps = {}) {
    super(scope, id, props);

    const label = { app: 'hello-k8s' };

    new ApiObject(this, 'deployment', {
      apiVersion: 'v1',
      kind: 'Pod',
      metadata: {
        namespace: 'frontend',
        name: 'nginx',
        labels: label,
      },
      spec: {
        containers: [
          {
            name: 'nginx',
            image: 'nginx:1.14-alpine',
            resources: {
              limits: {
                memory: '20Mi',
                cpu: 0.2,
              },
            },
          },
        ],
      },
    });
  }
}

const app = new App();
new MyChart(app, 'hello');
app.synth();
"
`;

exports[`Cdk8sComponent Custom Configuration should use custom paths and imports 3`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "dependencies": {
    "aws-cdk-lib": "^2.1.0",
    "cdk8s": "*",
    "cdk8s-plus-31": "*",
    "constructs": "^10.0.5",
  },
  "devDependencies": {
    "@types/jest": "*",
    "@types/node": "*",
    "@typescript-eslint/eslint-plugin": "^8",
    "@typescript-eslint/parser": "^8",
    "aws-cdk": "^2",
    "cdk8s-cli": "*",
    "commitizen": "*",
    "cz-customizable": "*",
    "esbuild": "*",
    "eslint": "^9",
    "eslint-config-prettier": "*",
    "eslint-import-resolver-typescript": "*",
    "eslint-plugin-import": "*",
    "eslint-plugin-prettier": "*",
    "jest": "*",
    "jest-junit": "^16",
    "prettier": "*",
    "projen": "*",
    "ts-jest": "*",
    "ts-node": "*",
    "typescript": "*",
  },
  "jest": {
    "clearMocks": true,
    "collectCoverage": true,
    "coverageDirectory": "coverage",
    "coveragePathIgnorePatterns": [
      "/node_modules/",
    ],
    "coverageProvider": "v8",
    "coverageReporters": [
      "json",
      "lcov",
      "clover",
      "cobertura",
      "text",
    ],
    "reporters": [
      "default",
      [
        "jest-junit",
        {
          "outputDirectory": "test-reports",
        },
      ],
    ],
    "testMatch": [
      "<rootDir>/@(src|test)/**/*(*.)@(spec|test).ts?(x)",
      "<rootDir>/@(src|test)/**/__tests__/**/*.ts?(x)",
    ],
    "testPathIgnorePatterns": [
      "/node_modules/",
    ],
    "transform": {
      "^.+\\.[t]sx?$": [
        "ts-jest",
        {
          "tsconfig": "tsconfig.dev.json",
        },
      ],
    },
    "watchPathIgnorePatterns": [
      "/node_modules/",
    ],
  },
  "license": "Apache-2.0",
  "name": "test-cdk-app",
  "peerDependencies": {
    "cdk8s": "*",
  },
  "publishConfig": {
    "access": "public",
  },
  "scripts": {
    "build": "npx projen build",
    "bundle": "npx projen bundle",
    "cdk8s": "npx projen cdk8s",
    "cdk8s:import": "npx projen cdk8s:import",
    "cdk8s:synth": "npx projen cdk8s:synth",
    "clobber": "npx projen clobber",
    "commit": "npx projen commit",
    "compile": "npx projen compile",
    "default": "npx projen default",
    "deploy": "npx projen deploy",
    "destroy": "npx projen destroy",
    "diff": "npx projen diff",
    "eject": "npx projen eject",
    "eslint": "npx projen eslint",
    "package": "npx projen package",
    "post-compile": "npx projen post-compile",
    "post-upgrade": "npx projen post-upgrade",
    "pre-compile": "npx projen pre-compile",
    "projen": "npx projen",
    "synth": "npx projen synth",
    "synth:silent": "npx projen synth:silent",
    "test": "npx projen test",
    "test:watch": "npx projen test:watch",
    "upgrade": "npx projen upgrade",
    "watch": "npx projen watch",
  },
  "version": "0.0.0",
}
`;

exports[`Cdk8sComponent Default Configuration should add cdk8s component with default settings to CdkApp 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

language: typescript
app: npx ts-node src/main.ts
imports:
  - k8s@1.30.0
"
`;

exports[`Cdk8sComponent Default Configuration should add cdk8s component with default settings to CdkApp 2`] = `
"import { App, Stack, StackProps } from 'aws-cdk-lib';
import { Construct } from 'constructs';

export class MyStack extends Stack {
  constructor(scope: Construct, id: string, props: StackProps = {}) {
    super(scope, id, props);

    // define resources here...
  }
}

// for development, use account/region from cdk cli
const devEnv = {
  account: process.env.CDK_DEFAULT_ACCOUNT,
  region: process.env.CDK_DEFAULT_REGION,
};

const app = new App();

new MyStack(app, 'test-cdk-app-dev', { env: devEnv });
// new MyStack(app, 'test-cdk-app-prod', { env: prodEnv });

app.synth();"
`;

exports[`Cdk8sComponent Default Configuration should add cdk8s component with default settings to CdkApp 3`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "dependencies": {
    "aws-cdk-lib": "^2.1.0",
    "cdk8s": "*",
    "cdk8s-plus-30": "*",
    "constructs": "^10.0.5",
  },
  "devDependencies": {
    "@types/jest": "*",
    "@types/node": "*",
    "@typescript-eslint/eslint-plugin": "^8",
    "@typescript-eslint/parser": "^8",
    "aws-cdk": "^2",
    "cdk8s-cli": "*",
    "commitizen": "*",
    "cz-customizable": "*",
    "esbuild": "*",
    "eslint": "^9",
    "eslint-config-prettier": "*",
    "eslint-import-resolver-typescript": "*",
    "eslint-plugin-import": "*",
    "eslint-plugin-prettier": "*",
    "jest": "*",
    "jest-junit": "^16",
    "prettier": "*",
    "projen": "*",
    "ts-jest": "*",
    "ts-node": "*",
    "typescript": "*",
  },
  "jest": {
    "clearMocks": true,
    "collectCoverage": true,
    "coverageDirectory": "coverage",
    "coveragePathIgnorePatterns": [
      "/node_modules/",
    ],
    "coverageProvider": "v8",
    "coverageReporters": [
      "json",
      "lcov",
      "clover",
      "cobertura",
      "text",
    ],
    "reporters": [
      "default",
      [
        "jest-junit",
        {
          "outputDirectory": "test-reports",
        },
      ],
    ],
    "testMatch": [
      "<rootDir>/@(src|test)/**/*(*.)@(spec|test).ts?(x)",
      "<rootDir>/@(src|test)/**/__tests__/**/*.ts?(x)",
    ],
    "testPathIgnorePatterns": [
      "/node_modules/",
    ],
    "transform": {
      "^.+\\.[t]sx?$": [
        "ts-jest",
        {
          "tsconfig": "tsconfig.dev.json",
        },
      ],
    },
    "watchPathIgnorePatterns": [
      "/node_modules/",
    ],
  },
  "license": "Apache-2.0",
  "name": "test-cdk-app",
  "peerDependencies": {
    "cdk8s": "*",
  },
  "publishConfig": {
    "access": "public",
  },
  "scripts": {
    "build": "npx projen build",
    "bundle": "npx projen bundle",
    "cdk8s": "npx projen cdk8s",
    "cdk8s:import": "npx projen cdk8s:import",
    "cdk8s:synth": "npx projen cdk8s:synth",
    "clobber": "npx projen clobber",
    "commit": "npx projen commit",
    "compile": "npx projen compile",
    "default": "npx projen default",
    "deploy": "npx projen deploy",
    "destroy": "npx projen destroy",
    "diff": "npx projen diff",
    "eject": "npx projen eject",
    "eslint": "npx projen eslint",
    "package": "npx projen package",
    "post-compile": "npx projen post-compile",
    "post-upgrade": "npx projen post-upgrade",
    "pre-compile": "npx projen pre-compile",
    "projen": "npx projen",
    "synth": "npx projen synth",
    "synth:silent": "npx projen synth:silent",
    "test": "npx projen test",
    "test:watch": "npx projen test:watch",
    "upgrade": "npx projen upgrade",
    "watch": "npx projen watch",
  },
  "version": "0.0.0",
}
`;

exports[`Cdk8sComponent Default Configuration should create test file when used in cdk8s projects 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

language: typescript
app: npx ts-node src/main.ts
imports:
  - k8s@1.30.0
"
`;

exports[`Cdk8sComponent File Generation should generate cdk8s.yaml with correct typescript configuration 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

language: typescript
app: npx ts-node apps/index.ts
imports:
  - k8s@1.31.0
  - istio@1.0.0
"
`;

exports[`Cdk8sComponent File Generation should generate sample files in correct locations 1`] = `
"import { App, Chart, ChartProps, ApiObject } from 'cdk8s';
import { Construct } from 'constructs';

export class MyChart extends Chart {
  constructor(scope: Construct, id: string, props: ChartProps = {}) {
    super(scope, id, props);

    const label = { app: 'hello-k8s' };

    new ApiObject(this, 'deployment', {
      apiVersion: 'v1',
      kind: 'Pod',
      metadata: {
        namespace: 'frontend',
        name: 'nginx',
        labels: label,
      },
      spec: {
        containers: [
          {
            name: 'nginx',
            image: 'nginx:1.14-alpine',
            resources: {
              limits: {
                memory: '20Mi',
                cpu: 0.2,
              },
            },
          },
        ],
      },
    });
  }
}

const app = new App();
new MyChart(app, 'hello');
app.synth();
"
`;

exports[`Cdk8sComponent Integration with Different Project Types should handle multiple imports correctly 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

language: typescript
app: npx ts-node src/main.ts
imports:
  - k8s@1.30.0
  - prometheus-operator@1.0.0
  - cert-manager@2.0.0
  - istio@3.0.0
  - nginx-ingress@4.0.0
"
`;

exports[`Cdk8sComponent Integration with Different Project Types should work correctly with cdk-app with disabled sample code 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

language: typescript
app: npx ts-node src/main.ts
imports:
  - k8s@1.30.0
"
`;

exports[`Cdk8sComponent Integration with Different Project Types should work correctly with cdk-app with disabled sample code 2`] = `
"import { App, Chart, ChartProps, ApiObject } from 'cdk8s';
import { Construct } from 'constructs';

export class MyChart extends Chart {
  constructor(scope: Construct, id: string, props: ChartProps = {}) {
    super(scope, id, props);

    const label = { app: 'hello-k8s' };

    new ApiObject(this, 'deployment', {
      apiVersion: 'v1',
      kind: 'Pod',
      metadata: {
        namespace: 'frontend',
        name: 'nginx',
        labels: label,
      },
      spec: {
        containers: [
          {
            name: 'nginx',
            image: 'nginx:1.14-alpine',
            resources: {
              limits: {
                memory: '20Mi',
                cpu: 0.2,
              },
            },
          },
        ],
      },
    });
  }
}

const app = new App();
new MyChart(app, 'hello');
app.synth();
"
`;

exports[`Cdk8sComponent Task Configuration should create all required cdk8s tasks with default paths 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "dependencies": {
    "aws-cdk-lib": "^2.1.0",
    "cdk8s": "*",
    "cdk8s-plus-30": "*",
    "constructs": "^10.0.5",
  },
  "devDependencies": {
    "@types/jest": "*",
    "@types/node": "*",
    "@typescript-eslint/eslint-plugin": "^8",
    "@typescript-eslint/parser": "^8",
    "aws-cdk": "^2",
    "cdk8s-cli": "*",
    "commitizen": "*",
    "cz-customizable": "*",
    "esbuild": "*",
    "eslint": "^9",
    "eslint-config-prettier": "*",
    "eslint-import-resolver-typescript": "*",
    "eslint-plugin-import": "*",
    "eslint-plugin-prettier": "*",
    "jest": "*",
    "jest-junit": "^16",
    "prettier": "*",
    "projen": "*",
    "ts-jest": "*",
    "ts-node": "*",
    "typescript": "*",
  },
  "jest": {
    "clearMocks": true,
    "collectCoverage": true,
    "coverageDirectory": "coverage",
    "coveragePathIgnorePatterns": [
      "/node_modules/",
    ],
    "coverageProvider": "v8",
    "coverageReporters": [
      "json",
      "lcov",
      "clover",
      "cobertura",
      "text",
    ],
    "reporters": [
      "default",
      [
        "jest-junit",
        {
          "outputDirectory": "test-reports",
        },
      ],
    ],
    "testMatch": [
      "<rootDir>/@(src|test)/**/*(*.)@(spec|test).ts?(x)",
      "<rootDir>/@(src|test)/**/__tests__/**/*.ts?(x)",
    ],
    "testPathIgnorePatterns": [
      "/node_modules/",
    ],
    "transform": {
      "^.+\\.[t]sx?$": [
        "ts-jest",
        {
          "tsconfig": "tsconfig.dev.json",
        },
      ],
    },
    "watchPathIgnorePatterns": [
      "/node_modules/",
    ],
  },
  "license": "Apache-2.0",
  "name": "test-cdk-app",
  "peerDependencies": {
    "cdk8s": "*",
  },
  "publishConfig": {
    "access": "public",
  },
  "scripts": {
    "build": "npx projen build",
    "bundle": "npx projen bundle",
    "cdk8s": "npx projen cdk8s",
    "cdk8s:import": "npx projen cdk8s:import",
    "cdk8s:synth": "npx projen cdk8s:synth",
    "clobber": "npx projen clobber",
    "commit": "npx projen commit",
    "compile": "npx projen compile",
    "default": "npx projen default",
    "deploy": "npx projen deploy",
    "destroy": "npx projen destroy",
    "diff": "npx projen diff",
    "eject": "npx projen eject",
    "eslint": "npx projen eslint",
    "package": "npx projen package",
    "post-compile": "npx projen post-compile",
    "post-upgrade": "npx projen post-upgrade",
    "pre-compile": "npx projen pre-compile",
    "projen": "npx projen",
    "synth": "npx projen synth",
    "synth:silent": "npx projen synth:silent",
    "test": "npx projen test",
    "test:watch": "npx projen test:watch",
    "upgrade": "npx projen upgrade",
    "watch": "npx projen watch",
  },
  "version": "0.0.0",
}
`;

exports[`Cdk8sComponent Task Configuration should create tasks with custom paths 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "dependencies": {
    "aws-cdk-lib": "^2.1.0",
    "cdk8s": "*",
    "cdk8s-plus-30": "*",
    "constructs": "^10.0.5",
  },
  "devDependencies": {
    "@types/jest": "*",
    "@types/node": "*",
    "@typescript-eslint/eslint-plugin": "^8",
    "@typescript-eslint/parser": "^8",
    "aws-cdk": "^2",
    "cdk8s-cli": "*",
    "commitizen": "*",
    "cz-customizable": "*",
    "esbuild": "*",
    "eslint": "^9",
    "eslint-config-prettier": "*",
    "eslint-import-resolver-typescript": "*",
    "eslint-plugin-import": "*",
    "eslint-plugin-prettier": "*",
    "jest": "*",
    "jest-junit": "^16",
    "prettier": "*",
    "projen": "*",
    "ts-jest": "*",
    "ts-node": "*",
    "typescript": "*",
  },
  "jest": {
    "clearMocks": true,
    "collectCoverage": true,
    "coverageDirectory": "coverage",
    "coveragePathIgnorePatterns": [
      "/node_modules/",
    ],
    "coverageProvider": "v8",
    "coverageReporters": [
      "json",
      "lcov",
      "clover",
      "cobertura",
      "text",
    ],
    "reporters": [
      "default",
      [
        "jest-junit",
        {
          "outputDirectory": "test-reports",
        },
      ],
    ],
    "testMatch": [
      "<rootDir>/@(src|test)/**/*(*.)@(spec|test).ts?(x)",
      "<rootDir>/@(src|test)/**/__tests__/**/*.ts?(x)",
    ],
    "testPathIgnorePatterns": [
      "/node_modules/",
    ],
    "transform": {
      "^.+\\.[t]sx?$": [
        "ts-jest",
        {
          "tsconfig": "tsconfig.dev.json",
        },
      ],
    },
    "watchPathIgnorePatterns": [
      "/node_modules/",
    ],
  },
  "license": "Apache-2.0",
  "name": "test-cdk-app",
  "peerDependencies": {
    "cdk8s": "*",
  },
  "publishConfig": {
    "access": "public",
  },
  "scripts": {
    "build": "npx projen build",
    "bundle": "npx projen bundle",
    "cdk8s": "npx projen cdk8s",
    "cdk8s:import": "npx projen cdk8s:import",
    "cdk8s:synth": "npx projen cdk8s:synth",
    "clobber": "npx projen clobber",
    "commit": "npx projen commit",
    "compile": "npx projen compile",
    "default": "npx projen default",
    "deploy": "npx projen deploy",
    "destroy": "npx projen destroy",
    "diff": "npx projen diff",
    "eject": "npx projen eject",
    "eslint": "npx projen eslint",
    "package": "npx projen package",
    "post-compile": "npx projen post-compile",
    "post-upgrade": "npx projen post-upgrade",
    "pre-compile": "npx projen pre-compile",
    "projen": "npx projen",
    "synth": "npx projen synth",
    "synth:silent": "npx projen synth:silent",
    "test": "npx projen test",
    "test:watch": "npx projen test:watch",
    "upgrade": "npx projen upgrade",
    "watch": "npx projen watch",
  },
  "version": "0.0.0",
}
`;
